# Alan-Compiler-CXX

./: .README.md.swp  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  acc  compile_commands.json  docker-compose.yaml  main.cpp
AlanC/: alanc.py
alancxx/: Makefile  Pipfile
alancxx/alancxx/: alancxx.py
examples/: README.md  call.alan  chars.alan  comm.alan  comments.alan  debug.alan  fact.alan  hanoi.alan  prime.alan  read.alan  reference.alan  reverse.alan  simple.alan  string.alan  test.alan
include/error/: error.hpp
include/symbol/: entry.hpp  scope.hpp  table.hpp  types.hpp
src/: .clang  README.md
src/ast/: README.md  ast.cpp  ast.hpp  llvmIR.cpp  semantic.cpp
src/codegen/: README.md  codegen.cpp  codegen.hpp
src/error/: error.cpp
src/fix/: fix.cpp  fix.hpp
src/general/: general.cpp  general.hpp
src/lexer/: lexer.l
src/lib/: lib.c
src/message/: message.cpp  message.hpp
src/parser/: parser.y
src/symbol/: entry.cpp  entry.hpp  scope.cpp  scope.hpp  table.cpp  table.hpp  types.cpp  types.hpp
